# AdaDisk

./: .gitignore  README.md  build_shared.sh  patch_and_build.sh
agents/: .gitignore  CMakeLists.txt  INSTALL.md  agent_AdaDisk.py  agent_adaDisk.py  agent_ingest.cpp  agent_query.cpp  distributed_agents.py
agents/results/: output_llama3.2:1b.txt  output_llama4:maverick.txt
apps/: build_disk_index.cpp
examples/: hello_diskann_index.cpp  hello_hpdic.cpp
experiments/: .gitignore  smart_scan_patch.csv
experiments/CSPG/: cspg_clean.cpp
experiments/PipeANN/: setup.sh  setup_SIFT1B.sh
experiments/SPTAG/: setup.sh
experiments/bigann/: build_mcgi_sift1b.sh  calc_lid_sift1b.py  compute_lid_fast.py  convert_search.py  convert_sift1b.py  readme.md  run_build_mcgi.sh  run_build_sift1b_baseline.sh  run_search_baseline.sh  run_search_mcgi.sh
experiments/deep1b/: calc_lid_deep1m.py  download_deep1b_10m.py  gen_query.py  readme.md  run_build_baseline.sh  run_build_mcgi.sh  run_search_baseline.sh  run_search_mcgi.sh
experiments/fmnist/: convert.py  extract_gnd.py  fmnist_build_baseline.sh  fmnist_build_mcgi.sh  fmnist_search_baseline.sh  fmnist_search_mcgi.sh  setup.sh
experiments/fullscan/: gist_R32_min1.0_max1.1.txt  gist_R32_min1.0_max1.2.txt  gist_R32_min1.0_max1.3.txt  gist_R32_min1.0_max1.4.txt  gist_R32_min1.0_max1.5.txt  (+130 more)
include/: disk_utils.h  filter_utils.h  hpdic_mcgi.h  index.h  index_build_params.h  neighbor.h  utils.h
src/: CMakeLists.txt  disk_utils.cpp  hpdic_mcgi.cpp  in_mem_graph_store.cpp  index.cpp  natural_number_map.cpp  pq.cpp
(+291 files in other folders)
